# e2etest

./: .env.example  README.md  main.py  mock_voice_manager.py  pyproject.toml
.github/workflows/: ci.yml
app/: voice_client.py
scenarios/: chain_of_tools.yaml  demo_230925.yaml  demo_230925_arabic.yaml  demo_230925_fast.yaml
tests/: test_basic.py  test_example.py  test_integration.py  test_mock_server.py
